# ScriptReel

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  HANDOFF.md  Makefile  README.md  SETUP.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.husky/: pre-commit
apps/web/: package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/api/beats/[beatId]/: route.ts
apps/web/app/api/beats/[beatId]/research/: route.ts
apps/web/app/api/cache/: route.ts
apps/web/app/api/files/[...path]/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/keys/: route.ts
apps/web/app/api/keys/[id]/: route.ts
apps/web/app/api/keys/[id]/test/: route.ts
apps/web/app/api/music/: route.ts
apps/web/app/api/playground/: route.ts
apps/web/app/api/projects/: route.ts
apps/web/app/api/projects/[id]/: route.ts
apps/web/app/api/projects/[id]/activity/: route.ts
apps/web/app/api/projects/[id]/beats/: route.ts
apps/web/app/api/projects/[id]/beats/choose/: route.ts
apps/web/app/api/projects/[id]/cancel/: route.ts
apps/web/app/api/projects/[id]/continue/: route.ts
apps/web/app/api/projects/[id]/generate/: route.ts
apps/web/app/api/projects/[id]/rerender/: route.ts
apps/web/app/api/projects/[id]/rescore/: route.ts
apps/web/app/api/quota/: route.ts
apps/web/app/api/voices/: route.ts
apps/web/app/api/voices/[id]/sample/: route.ts
apps/web/app/api/voices/prewarm/: route.ts
apps/web/app/playground/: page.tsx
apps/web/app/projects/[id]/: page.tsx
apps/web/app/projects/new/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: PipelineActivity.tsx  RerenderPanel.tsx  StageStepper.tsx  Storyboard.tsx  SubtitlePreviewCanvas.tsx  controls.tsx  shell.tsx  ui.tsx
apps/web/hooks/: useProject.ts
apps/web/lib/: activity.test.ts  activity.ts  api.ts  format.ts  queue.ts
apps/worker/: package.json  tsconfig.json
apps/worker/src/: cli.ts  handler.ts  index.ts
apps/worker/src/analysis/: factory.ts  knowledge.test.ts  knowledge.ts  llm.test.ts  llm.ts  media-verifier.ts  openai-analyzer.ts  run-analysis.test.ts  run-analysis.ts
apps/worker/src/cache/: disk-guard.ts
apps/worker/src/eval/: analyze-probe.ts  build-pool.ts  fetch-fixtures.ts  kappa.ts  matching.ts
apps/worker/src/ffmpeg/: assemble.ts  audio.ts  bin.ts  encoder.test.ts  encoder.ts  motion.ts  normalize.ts  probe.ts
apps/worker/src/generate/: flux.ts
apps/worker/src/pipeline/: align.ts  analyze.ts  beat-research.ts  compose.ts  context.ts  fake-stages.ts  fetch.ts  identity.ts  ladder.ts  manifest.ts  runner.ts  score.test.ts  score.ts  search.ts  tts.ts  vlm.ts
apps/worker/src/providers/: auth.ts  download.ts  europeana.test.ts  europeana.ts  flickr.test.ts  flickr.ts  inaturalist.test.ts  inaturalist.ts  internet-archive.test.ts  internet-archive.ts  library-of-congress.test.ts  library-of-congress.ts  met.test.ts  met.ts  nasa.ts  openverse.ts  pexels.test.ts  pexels.ts  pixabay.ts  quota-guard.ts  search-cache.ts  search.ts  smithsonian.test.ts  smithsonian.ts  thumbs.ts  usgs.test.ts  usgs.ts  wellcome.test.ts  wellcome.ts  wikidata-commons.test.ts  wikidata-commons.ts  wikimedia.ts
apps/worker/src/sidecar/: client.ts
apps/worker/src/subtitles/: render-ass.ts
apps/worker/src/voice/: client.ts
assets/brand/: textcard-themes.json
assets/music/: CREDITS.md  manifest.json
docs/: 00-INDEX.md  01-PRODUCT-BRIEF.md  02-FEATURES.md  03-ARCHITECTURE.md  04-TECH-STACK.md  05-DATA-MODEL.md  06-PIPELINE-SPEC.md  07-SCRIPT-ANALYSIS.md  08-MEDIA-SEARCH.md  09-MATCHING-ALGORITHM.md  10-TTS-SPEC.md  11-SUBTITLES-ALIGNMENT.md  12-TIMELINE-SCHEMA.md  13-COMPOSITION-SPEC.md  14-ML-SIDECAR.md  15-API-SPEC.md  16-FRONTEND-SPEC.md  17-DESIGN-SYSTEM.md  18-CODING-STANDARDS.md  19-SETUP-MACOS.md  20-ROADMAP.md  21-TESTING-QUALITY.md  22-RISKS-LIMITS-LICENSES.md  23-EXPANDED-SOURCING.md  24-ENTITY-VISUAL-INTELLIGENCE.md  25-RETRIEVAL-VERIFICATION-CASCADE.md  PIPELINE-WALKTHROUGH.md
fixtures/eval/: .ab-base224.json  .caption-sim.json  .captions.json  kappa-human.jsonl  kappa-rest.jsonl  labels.jsonl  pool-spec.jsonl
fixtures/golden/: G1.txt  G10.txt  G2.txt  G3.txt  G6.txt  G7.txt  G8.txt  G9.txt
fixtures/qa/: 2026-07-11.md
scripts/: ensure-local-db.mjs  fetch_music.py
services/ml/: Makefile  package.json  pyproject.toml
services/ml/app/: align.py  dino.py  embed.py  face.py  main.py  models.py  ocr.py  textcard.py  tts.py  vlm.py
services/ml/scripts/: caption_fixture.py  caption_sim.py  diag_siglip.py  fetch_models.py  smoke_gpu.py
services/ml/tests/: test_dino.py  test_embed.py  test_face.py  test_health.py  test_ocr.py  test_textcard.py  test_vlm.py
services/voice/: clone_variants.py  finalize_voices.py  generate_previews.py  package.json  pick_male.py  pick_more.py  pyproject.toml  sample.py  sample_health.py  server.py
supabase/: config.toml
supabase/migrations/: 0000_init.sql  0001_init.sql  0002_seed_music.sql  0003_realmusic.sql  0004_provider_keys.sql  0005_beat_segments.sql  0006_beat_visual_moments.sql  0007_candidates_created_at.sql  0008_asset_motion.sql  0009_beat_shots.sql  0010_beat_era.sql  0011_script_limit.sql  0012_enable_rls.sql  0013_pgboss_stately.sql
