[project]
name = "scriptreel-ml"
version = "0.0.0"
description = "ScriptReel ML sidecar — model inference only (TTS, embeddings, alignment, text cards)."
requires-python = "==3.12.*"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  # torch/torchvision come from the cu128 index on non-Apple — see [tool.uv.sources]. Plain PyPI
  # resolves to a CPU-ONLY wheel on Windows/Linux, which silently runs SigLIP + DINOv2 on the CPU.
  "torch>=2.5",
  "torchvision>=0.20", # DINOv2 AutoImageProcessor (doc 25 §6) needs it
  "transformers>=4.48,<5", # <5: SigLIP2/DINOv2 code targets 4.x; mlx-vlm would otherwise pull 5.x
  # --- Apple-Silicon only (MLX has no Windows/Linux build) ---------------------------------
  # Gated by platform so `uv sync` SUCCEEDS on Windows/Linux and installs the cross-platform
  # models below. On non-Apple, alignment uses faster-whisper (see align.py); the VLM gate
  # degrades (vlm.available() → false). MLX is Apple's array framework — arm64-mac wheels only.
  # Marker is Apple Silicon SPECIFICALLY (darwin+arm64) — `sys_platform=='darwin'` alone is also
  # true on Intel Macs, where MLX has no wheel. Intel Macs therefore use the faster-whisper path.
  "mlx>=0.22; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "mlx-vlm>=0.1.15,<0.2; sys_platform == 'darwin' and platform_machine == 'arm64'", # Qwen2.5-VL (doc 25 §5-D). 0.1.x keeps numpy<2
  # numba is a transitive of mlx-whisper on Apple; pinned so the resolver can't backtrack to
  # the ancient numba 0.53.1 (llvmlite 0.36) that fails to build on py3.12. Not needed off-Apple.
  "numba>=0.60; sys_platform == 'darwin' and platform_machine == 'arm64'",
  # --- Cross-platform alignment backend (everything except Apple Silicon) ------------------
  "faster-whisper>=1.0; sys_platform != 'darwin' or platform_machine != 'arm64'", # CTranslate2 word-timestamps (align.py)
  # --- Cross-platform models (torch / onnx — run everywhere) -------------------------------
  "kokoro>=0.9",
  "misaki[en]>=0.9",
  # misaki[en] (Kokoro's English G2P) needs spaCy's en_core_web_sm. It isn't on PyPI — it ships as
  # a wheel from the spacy-models GitHub release, so no package can depend on it and it was
  # previously installed ad-hoc. DECLARE it: an undeclared install is removed by the next
  # `uv sync`, which silently breaks English TTS (exactly what happened adding the cu128 index).
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
  "soundfile>=0.12",
  "pillow>=11",
  "pytesseract>=0.3.13",
  "insightface>=0.7",
  "onnxruntime>=1.19",
  "numpy<2",
  "huggingface-hub>=0.27",
  "httpx>=0.27", # OpenAI-compatible VLM backend off Apple (Ollama / LM Studio); see app/vlm.py
]

[dependency-groups]
dev = [
  "pytest>=8",
]

# Blackwell (RTX 50, sm_120) needs a CUDA-12.8 torch build; pull torch + torchvision from PyTorch's
# cu128 index on non-Apple, exactly as services/gen already does. Without this, uv resolves them
# from PyPI, which on Windows/Linux is the CPU-ONLY wheel: torch.cuda.is_available() is False and
# the whole vision stack (SigLIP scoring, DINOv2 identity) runs on the CPU while the GPU idles —
# silently, with no error. Apple Silicon keeps its PyPI arm64 wheel (that one carries MPS), so the
# marker must exclude darwin. torchvision is pinned to the same index because its compiled ops must
# match torch's build.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
